--- a/C-WS-1.ioc
+++ b/C-WS-1.ioc
@@ -8,8 +8,12 @@ Mcu.IP2=SYS
 Mcu.IPNb=3
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=VP_SYS_VS_Systick
-Mcu.PinsNb=1
+Mcu.Pin0=PD12
+Mcu.Pin1=PD13
+Mcu.Pin2=PD14
+Mcu.Pin3=PD15
+Mcu.Pin4=VP_SYS_VS_Systick
+Mcu.PinsNb=5
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -26,6 +30,14 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PD12.Locked=true
+PD12.Signal=GPIO_Output
+PD13.Locked=true
+PD13.Signal=GPIO_Output
+PD14.Locked=true
+PD14.Signal=GPIO_Output
+PD15.Locked=true
+PD15.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
